unpackaged/main/default/objects/Trade_Error_Log__c/Trade_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Trade Error Log</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Trade Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Errors Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>