unpackaged/main/default/objects/Trade_Error_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Trade Errors Log</relationshipLabel>
    <relationshipName>Trade_Errors_Log</relationshipName>
    <type>Lookup</type>
</CustomField>