unpackaged/main/default/objects/Trade_Error_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>