unpackaged/main/default/objects/Trade_Error_Log__c/fields/Date_Trades_Should_Have_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Trades_Should_Have_Occurred__c</fullName>
    <label>Date Trades Should Have Occurred</label>
    <type>Date</type>
</CustomField>