unpackaged/main/default/objects/Trade_Error_Log__c/fields/Responsible_Parties__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Parties__c</fullName>
    <label>Responsible Party(ies)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>