unpackaged/main/default/objects/Trade_Error_Log__c/fields/Total_Trade_Error_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Trade_Error_Amount__c</fullName>
    <label>Total Trade Error Amount</label>
    <summarizedField>Trade_Error_Impacted_Account__c.Trade_Error_Amount__c</summarizedField>
    <summaryForeignKey>Trade_Error_Impacted_Account__c.Trade_Error_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>