unpackaged/main/default/objects/Trade_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>