unpackaged/main/default/objects/Trade_Error_Log__c/listViews/My_Trade_Error_Logs_Completed.listView-meta.xml
<ListView>
    <fullName>My_Trade_Error_Logs_Completed</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>My Trade Error Logs - Completed</label>
</ListView>